<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/FrameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/material_dynamic_tertiary70"
    tools:context=".NewTripFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/homeButtonTrip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/homeButton"
            android:textColor="#D1C4E9"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nameTrip"
            android:textColor="#283593"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/tripNameEditText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/tripNameEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/fillerEditText"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColorHint="#283593"
            app:layout_constraintBottom_toTopOf="@+id/locationTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <TextView
            android:id="@+id/locationTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/locaton"
            android:textColor="#283593"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/tripLocatoinEditText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/tripLocatoinEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/fillerEditText"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColorHint="#283593"
            app:layout_constraintBottom_toTopOf="@+id/dateTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/dateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textColor="#283593"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/tripDateEditText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/infoTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info"
            android:textColor="#283593"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tripDateEditText" />

        <EditText
            android:id="@+id/tripInfoEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/fillerEditText"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColorHint="#283593"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/infoTextView"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="200dp"
            android:text="@string/saveButton"
            android:textColor="#D1C4E9"
            app:layout_constraintBottom_toTopOf="@+id/homeButtonTrip"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tripInfoEditText"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/tripDateEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/fillerEditText"
            android:importantForAutofill="no"
            android:inputType="date"
            android:minHeight="48dp"
            android:textColorHint="#283593"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dateTextView"
            tools:ignore="TextContrastCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>