<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/originCodeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/whereTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/whereTextView"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/originCodeTextView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/destinationCodeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="TextView"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/whereTextView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/departureStringTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/departureDateTime"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/originCodeTextView" />

    <TextView
        android:id="@+id/departureDateTimeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:text="TextView"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/departureStringTextView"
        app:layout_constraintTop_toBottomOf="@+id/originCodeTextView" />

    <TextView
        android:id="@+id/arrivalStringTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/arrivalDateTime"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/departureStringTextView" />

    <TextView
        android:id="@+id/arrivalDateTimeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:text="TextView"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/arrivalStringTextView"
        app:layout_constraintTop_toBottomOf="@+id/departureStringTextView" />

    <TextView
        android:id="@+id/FlightNumberStringTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/flightNumber"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/arrivalStringTextView" />

    <TextView
        android:id="@+id/flightNumberTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:text="TextView"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/FlightNumberStringTextView"
        app:layout_constraintTop_toBottomOf="@+id/arrivalStringTextView" />
</androidx.constraintlayout.widget.ConstraintLayout>